Described changes connected with button convert in color models help

--- a/UniGraphics/Help/ColorModelsHelp.xaml
+++ b/UniGraphics/Help/ColorModelsHelp.xaml
@@ -36,26 +36,29 @@
                     Foreground="Black"
                     FontSize="16"
                     TextWrapping="Wrap"
-                    TextAlignment="Justify">
+                    TextAlignment="Justify" Height="450">
                         <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Робота з зображенням"/><LineBreak/>
-                        <Run Text="Відкрите зображення відображене у RGB. Щоб конвертувати його у HSL натисніть кнопку 'Конвертувати'. Як можна спостерігати"/>
-                        <Run Text="в деяких випадках зображення при переході до HSL може бути дещо спотворене та гірше за якістю, через відмінність"/>
+                        <Run Text="Відкрите зображення відображене у RGB. Щоб конвертувати його у HSL натисніть кнопку 'Конвертувати'."/>
+                        <Run Text="Після першого ж натиснення кнопка зникне - оскільки зображення уже конвертоване, немає потреби конвертувати знову."></Run>
+                        <Run Text="Можливість конвертувати з'явиться при відкритті іншого зображення."></Run>
+                        <Run Text="Як можна спостерігати, в деяких випадках зображення при переході до HSL може бути дещо спотворене та гірше за якістю, через відмінність"/>
                         <Run Text="у колірному діапазоні між двома моделями. Щоб побачити параметри кольорів у даних моделях - наведіть курсор на зображення."/>
                         <Run Text="При зміні положення курсору у лівому куті змінюються параметри кольору для RGB та HSL."/><LineBreak/>
                         <Run Text="Щоб коригувати яскравість для певного тону - оберіть тон у верхньому куті панелі управління та потягніть повзунок"/>
-                        <Run Text="яскравості від -100% до +100%. Тоді ви можете спостерігати зміни у зображенні в моделі HSL."/><LineBreak/>
-                        <Run Text="Для збереження зображення натисніть 'Файл->Зберегти як'. Можливе збереження у форматах .jpeg, .jpg, .png, .tiff, .bmp  .wmf"/> <LineBreak/>
+                        <Run Text="яскравості від -100% до +100%. Тоді ви можете спостерігати зміни у зображенні в моделі HSL, за умови що воно завантажене."/><LineBreak/>
+                        <Run Text="Для збереження зображення натисніть 'Файл->Зберегти як'. Можливе збереження у таких форматах, як: .jpeg, .jpg, .png, .tiff, .bmp, .wmf."/> <LineBreak/>
                 </TextBlock>
                 <TextBlock
                         Foreground="Black"
                         FontSize="16"
                         TextWrapping="Wrap"
-                        TextAlignment="Justify" Height="252">
+                        TextAlignment="Justify" Height="379">
                         <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Проблемні ситуації"/><LineBreak/>
-                        <Run Text="При роботі можливі деякі розбіжності з розміром зображення, оскільки розмір поля для них"/>
+                        <Run Text="Після натиснення кнопки 'конвертувати' бажано зачекати, доки не з'явиться конвертоване зображення, і лише тоді продовжувати роботу з яскравістю."/><LineBreak/>
+                        <Run Text="При роботі можливі деякі розбіжності з розміром зображення, оскільки розмір поля для них"></Run>
                         <Run Text="і розмір самого зображення можуть не співпадати. Так зображення може бути не відображене повністю,"/>
                         <Run Text="оскільки виходить за межі поля. Для цього скоригуйте розмір вікна, наприклад потягніть вправо, щоб розширити межі."/><LineBreak/>
-                        <Run Text="Крім того, для великих за розміром зображень можлива певна затримка при переході до HSL."/>
+                        <Run Text="Крім того, для великих за розміром зображень після натиснення кнопки 'конвертувати' можлива певна затримка при переході до HSL."/>
                         <Run Text="Тому для уникнення неповного відображення відкритих файлів, бажано, щоб розмір зображення був невеликим, в наступних межах:"/>
                         <Run Text="(200-500)x(200-700). Ідеальний розмір - 350x600."/>
                 </TextBlock>
