Added transformation viewmodel, manager, matrix class and made small improvements.

--- a/UniGraphics/MainWindow.xaml
+++ b/UniGraphics/MainWindow.xaml
@@ -16,6 +16,6 @@
             Name="MainFrame"
             DataContextChanged="MainFrame_DataContextChanged"
             LoadCompleted="MainFrame_LoadCompleted"
-            NavigationUIVisibility="Hidden" />
+            NavigationUIVisibility="Hidden" ContentRendered="MainFrame_ContentRendered" />
     </Grid>
 </Window>
