--- a/UniGraphics/HelpWindow.xaml
+++ b/UniGraphics/HelpWindow.xaml
@@ -67,7 +67,8 @@
             VerticalAlignment="Top"
             Grid.Column="0"
             Foreground="White"
-            FontSize="18" Width="203" Height="37"/>
+            FontSize="18" Width="203" Height="37"
+            MouseLeftButtonUp="TransformationHelpClicked"/>
         <Image
             Width="72"
             Grid.Column="0"
